--- a/composer.json
+++ b/composer.json
@@ -18,12 +18,14 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "evenement/evenement": "~1.0",
-        "react/socket": "0.3.*"
+        "react/socket": "^1.1"
     },
     "autoload": {
         "psr-0": {
             "DNode": "src"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.4"
     }
 }
