--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
         {
             "name": "Igor Wiedler",
             "email": "igor@wiedler.ch"
+        },
+        {
+            "name": "Marijn Ophorst",
+            "email": "marijn@monomelodies.nl"
         }
     ],
     "require": {
@@ -21,8 +25,8 @@
         "react/socket": "^1.2.1"
     },
     "autoload": {
-        "psr-0": {
-            "DNode": "src"
+        "psr-4": {
+            "Monomelodies\\DNode\\": "src/"
         }
     },
     "require-dev": {
