--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     ],
     "require": {
         "php": ">=7.3",
-        "react/socket": "^1.2.1"
+        "react/socket": "^1.2.1",
+        "clue/block-react": "^1.3"
     },
     "require-dev": {
         "toast/unit": "^1.3",
